# mindgames

./: .env.example  .gitignore  README.md  RESEARCH_PLAN.md  pyproject.toml
data/: hanabi.grpo.jsonl
docs/: hanabi_grpo.md  tools.md
experiments/: .gitignore
experiments/_schema/: experiment.schema.json
experiments/hanabi_eval/: experiment.yaml
experiments/hanabi_hitom_merged_20_nothinking/: experiment.yaml
experiments/hanabi_qwen3_8b/: experiment.yaml
experiments/hanabi_qwen3_8b_vllm_no_thinking_100/: experiment.yaml
experiments/hanabi_qwen3_8b_vllm_thinking_8192_100/: experiment.yaml
experiments/hanabi_qwen3_8b_vs_gemini25_flash/: experiment.yaml
experiments/ita2p_qwen3_8b_vs_gemini25_flash/: experiment.yaml
experiments/ita3p_qwen3_8b_vs_2x_gemini25_flash/: experiment.yaml
experiments/ita3p_uniapi_eval/: experiment.yaml
experiments/liarsdice_eval/: experiment.yaml
experiments/liarsdice_qwen3_8b_vs_gemini25_flash/: experiment.yaml
experiments/qwen3vl_fact_probe_all/: experiment.yaml
experiments/templates/: fact_probe.yaml  rollout_eval.yaml  tom_probe.yaml
mindgames/: __init__.py  _dotenv.py  core.py  state.py
mindgames/agents/: __init__.py  wrappers.py  (+3 more)
tests/: test_action_formatting_wrapper.py  test_codenames_env.py  test_hanabi_env.py  test_runner_smoke.py
tools/: expctl.py  jsonl_to_json.py  probe_fact_leakage.py  rollout_utils.py  rollouts_to_sft_jsonl.py  run_rollouts.py  serve_qwen3_8b.sh  serve_qwen3vl_4b_instruct.sh  serve_qwen3vl_4b_thinking.sh  split_rollouts_jsonl.py  summarize_rollouts.py  train_sft_trl.py  view_jsonl.py
(+283 files in other folders)
