[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindgames"
dynamic = ["version"]
description = "Minimal, self-contained subset of TextArena for mindgame RL research (selected envs + agents)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "cql" }]
dependencies = [
    "ms-swift[all]>=3.12.4",
    "msgspec>=0.20.0",
    "vllm>=0.13.0",
]

[project.optional-dependencies]
agents = [
  "openai",
  "requests",
  "websockets",
  "transformers",
]
serve = [
  "vllm",
]

[dependency-groups]
dev = [
  "pyyaml>=6.0.0",
  "jsonschema>=4.22.0",
  "wandb>=0.23.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.version]
path = "mindgames/__about__.py"
